         (thanks, Gergely Szasz) (Sergio).
20150423 fmfconv.c: set output mode to AVI when using .avi file extension
         (Sergio).
20150426 fmfconv.[c|h],fmfconv_[ff|jpg|png].c: implement --version option in
         fmfconv (more from patch #329) (partially fixes bug #320) (Gergely
         Szasz).
20150427 audio2tape.cc,configure.ac,createhdf.c,fmfconv.c,listbasic.c,
         profile2map.c,raw2hdf.c,rzxcheck.c,rzxdump.c,rzxtool.c,scl2trd.c,
         snap2tzx.c,snapconv.c,tape2wav.c,tapeconv.c,tzxlist.c: add --version
         option to the utilities (partially fixes bug #320) (Sergio).
20150427 AUTHORS: update authors list (Sergio).
20150502 Makefile.am,audio2tape_res.rc,configure.ac,createhdf_res.rc,
         fmfconv.h,fmfconv_res.rc,listbasic_res.rc,profile2map_res.rc,
         raw2hdf_res.rc,rzxcheck_res.rc,rzxdump_res.rc,rzxtool_res.rc,
         scl2trd_res.rc,snap2tzx_res.rc,snapconv_res.rc,tape2wav_res.rc,
         tapeconv_res.rc,tzxlist_res.rc: add version info to Windows executables
         (Sergio).
20150502 audio2tape.cc,createhdf.c,fmfconv.c,listbasic.c,profile2map.c,
         raw2hdf.c,rzxcheck.c,rzxdump.c,rzxtool.c,scl2trd.c,snap2tzx.c,
         snapconv.c,tape2wav.c,tapeconv.c,tzxlist.c: add --help option to the
         utilities (partially fixes bug #320) (Sergio).
20150502 man/{audio2tape.1,createhdf.1,listbasic.1,profile2map.1, raw2hdf.1,
         rzxcheck.1,rzxdump.1,rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,
         tape2wav.1,tapeconv.1,tzxlist.1}: document --help and --version options
         (Sergio).
20150502 rzxdump.c,scl2trd.c: fix exit code when passed bad operands (Sergio).
20150503 tapeconv.c: remove double spacing and "the the" in help (thanks, 
         Stuart) (Sergio).
20150505 createhdf.c,fmfconv.c,listbasic.c,profile2map.c,raw2hdf.c,rzxcheck.c,
         rzxdump.c,rzxtool.c,scl2trd.c,snap2tzx.c,snapconv.c,tape2wav.c,
         tapeconv.c,tzxlist.c: reduce the number of unique strings (thanks,
         Stuart) (Sergio).